@@ -1,3 +1,12 @@
+2001-10-02  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* readelf.c (display_debug_line, display_debug_pubnames,
+	display_debug_info, display_debug_frames): Detect and warn
+	about 64-bit format entries.
+	(display_debug_aranges): Reword 64-bit warning.
+	(debug_displays): Add .debug_pubtypes as a known, but not yet
+	supported, debug section.
+
 2001-10-01  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* readelf.c (display_debug_aranges): Warn about DWARF64 format
